# directstorage-rs

./: Cargo.toml  directstorage_sample.txt  readme.md
.cargo/: config
.metadata/: dstorage.cpp  dstorage.manual.cs  generate.proj  options.rsp
.windows/winmd/: Microsoft.Direct3D.DirectStorage.winmd
crates/samples/dstorage/: Cargo.toml  deploy.cmd
crates/samples/dstorage/src/: main.rs
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
src/: bindings.rs  lib.rs
