[package]
name = "microsoft-directstorage"
version = "0.0.0"
publish = false
authors = ["Microsoft"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = ""
repository = ""
exclude = [".github", ".windows", ".metadata", "docs", "tests"]

[workspace]
members = [
    "crates/tools/*",
    "crates/samples/*",
]

[dependencies.windows]
version = "0.43.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Direct3D12",
]
