[package]
name = "sample_dstorage"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_System_Com",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
]

[dependencies.microsoft-directstorage]
path = "../../../"